# librfn

./: .gitignore  AUTHORS  Doxyfile  Makefile-librfn.am  Makefile-libtt.am  Makefile.am  NEWS  README  annotated.html  atomic_8h.html  atomic_8h_source.html  benchmark_8c.html  benchmark_8c_source.html  benchmark_8h.html  benchmark_8h_source.html  bitops_8c.html  bitops_8c_source.html  bitops_8h.html  bitops_8h_source.html  bitopstest_8c.html  bitopstest_8c_source.html  classes.html  configure.ac  console_8c.html  console_8c_source.html  console_8h.html  console_8h_source.html  console__cdcacm_8c.html  console__cdcacm_8c_source.html  console__cmd__gpio_8c.html  console__cmd__gpio_8c_source.html  console__libopencm3_8c.html  console__libopencm3_8c_source.html  console__posix_8c.html  console__posix_8c_source.html  console__ring_8c.html  console__ring_8c_source.html  console__stm32f1_8c.html  console__stm32f1_8c_source.html  consoledemo_8c.html  (+241 more)
include/: librfn.h
include/librfn/: atomic.h  benchmark.h  bintree.h  bitops.h  console.h  constexpr.h  enum.h  fibre.h  fuzz.h  hex.h  list.h  messageq.h  pack.h  protothreads.h  rand.h  regdump.h  rgb.h  rotenc.h  stats.h  string.h  time.h  util.h  wavheader.h
lib/: fibre.c  hex.c  messageq.c  rand.c  string.c  time_libopencm3.c  time_posix.c  util.c
librfn/: bintree.c  bitops.c  console.c  fibre.c  hex.c  pack.c  regdump.c  rgb.c  rotenc.c  stats.c  util.c
librfn/libopencm3/: console_cdcacm.c  console_cmd_gpio.c  console_libopencm3.c  console_stm32.c  console_stm32f1.c  time_libopencm3.c
librfn/posix/: console_posix.c  fibre_posix.c
model/: biquaddebug.c  cabsim.dsp  tonestack.dsp  util.lib
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  (+92 more)
src/: Makefile.am  benchmark.c  consoledemo.c  gammademo.c  libbench.c  libbench.h  template.c  template.h
src/jacklab/: Makefile.am  jacklab.c
src/jacklua/: Makefile.am  jacklua.c
src/librfn/: Makefile.am  benchmark.c  bitops.c  enum.c  fibre.c  fibre_posix.c  fuzz.c  hex.c  list.c  messageq.c  pack.c  rand.c  string.c  time_posix.c  util.c  wavheader.c
src/librfn/demos/: fibredemo.c
src/librfn/include/: librfn.h
src/librfn/include/librfn/: atomic.h  benchmark.h  bitops.h  enum.h  fibre.h  fixed.h  fuzz.h  hex.h  list.h  messageq.h  pack.h  protothreads.h  rand.h  string.h  time.h  util.h  wavheader.h
src/librfn/tests/: bitopstest.c  fibredemotest  fibretest.c  fuzztest.c  listtest.c  messageqtest.c  protothreadstest.c  randtest.c  utiltest.c  wavheadertest.c
src/libtt/: 12AX7.h  Makefile.am  alsawriter.c  analyse.c  audiowriter.c  biquad.c  cabsim.c  controls.h  dcblocker.c  delay.c  drummachine.c  extract_controls.sh  firstorder.c  jackcommon.c  jackcommon.h  jackwriter.c  preamp.c  preset.c  presetio.c  pulsewriter.c  quantizer.c  reverb.c  sample.c  sbuf.c  siggen.c  template.c  tintamp.c  tintdrum.c  tonestack.c  tubestage.c  util.c  waveshaper.c  wavreader.c  wavwriter.c
src/libtt/include/: libtt.h
src/libtt/include/libtt/: alsawriter.h  analyse.h  audiowriter.h  biquad.h  cabsim.h  dcblocker.h  delay.h  drummachine.h  extract_controls.sh  firstorder.h  jackwriter.h  preamp.h  preset.h  presetio.h  pulsewriter.h  quantizer.h  reverb.h  sample.h  sbuf.h  siggen.h  template.h  tintamp.h  tintdrum.h  tonestack.h  tubestage.h  util.h  waveshaper.h  wavreader.h  wavwriter.h
src/libtt/lib23k/: hhc_Rock_b.h  kick_Dry_b.h  sn_Wet_b.h
src/libtt/tests/: benchmark.c  biquadtest.c  cabsimtest.c  delaytest.c  drummachinetest.c  preamptest.c  presettest.c  sampletest.c  templatetest.c  tintamptest.c  tonestacktest.c  wavreadertest.c
src/tintamp/: Makefile.am  tintamp.gresource.xml  tintamp.ui  tintamp_main.c  tintamp_ui.c  tintamp_ui.h  tintamp_ui.xml
src/tintdrum/: Makefile.am  tintdrum  tintdrum_main.c
tests/: Makefile.am  analysetest.c  benchmark.c  biquadtest.c  bitopstest.c  cabsimtest.c  constexprtest.c  enumtest.c  fibredemotest  fibretest.c  fuzztest.c  messageqtest.c  preamptest.c  presettest.c  rotenctest.c  sampletest.c  siggentest.c  templatetest.c  tintamptest.c  tonestacktest.c  tubestagetest.c  utiltest.c  waveshapertest.c  wavheadertest.c  wavreadertest.c
tools/: tube_transfer.py
