noinst_LIBRARIES=libtt.a
libtt_a_CPPFLAGS=-I../librfn/include -Iinclude
libtt_a_SOURCES=\
	sample.c \
	sbuf.c \
	util.c \
	analyse.c \
	biquad.c \
	dcblocker.c \
	firstorder.c \
	siggen.c \
	quantizer.c \
	waveshaper.c \
	wavreader.c \
	wavwriter.c \
	tubestage.c \
	preamp.c \
	tonestack.c \
	cabsim.c \
	tintamp.c \
	drummachine.c \
	preset.c \
	presetio.c
